LIST OF CHANGES FOR NPG-QC PACKAGE

 - Dropped special SeqQC provisions for GCLP runs. The fact that the pages
   will have links to non-existing Sequencescape LIMS entities does not
   matter (lab work went though now decommissioned LIMS).
 - Added reporting of MQC outcomes for Elembio lanes.

release 74.3.0 (2025-07-22)
 - Changes to npg_qc::elembio::tag_metrics_generator 
   - An Elembio lane might contain multiple libraries for the same
     sample. A tag index is assigned per sample, therefore multiple
     barcode sequences might correspond to the same tag index.
     npg_qc::autoqc::results::tag_metrics class allows for one
     barcode per tag index. One of the barcodes is chosen to
     represent a set of barcodes. This change flags the presence
     of other barcodes by appending the number of the remaining
     barcodes with a plus sign to the barcode string. Example:
     ATCGATCG-ATCGAAAA[+143]
   - A comment is added to npg_qc::autoqc::results::tag_metrics
     object to explain the above tag sequence notation if it is
     present.
   - Control samples are identified by their name and flagged.
     Examples: GCACATAGTC-GACTACTAGC(CTRL) or ATGTCGCTAG-CTAGCTCGTA[+3](CTRL).
   - Where there is one control sample per lane, spiked_control_index
     attribute of npg_qc::autoqc::results::tag_metrics object is set, making
     calculations of the coefficient of variance and highlighting of
     underrepresented tags more accurate.
   - More properties are set for tag zero in tag_metrics object
     to make the definition of tag zero for Elembio lanes identical
     to the one for Illumina lanes.
   - The code is refactored to avoid repetitions and to make
     convert_run_stats_to_tag_metrics function more concise.
 - Ensured that computed polonies counts are integers. The float values are
   rounded down to the nearest integer.
 - Information about multiple tags per sample representation is added
   to the tag metrics SeqQC info section.
