@@ -4,6 +4,8 @@ LIST OF CHANGES FOR NPG-QC PACKAGE
    will have links to non-existing Sequencescape LIMS entities does not
    matter (lab work went though now decommissioned LIMS).
  - Added reporting of MQC outcomes for Elembio lanes.
+ - Bugfix in parsing Elembio RunManifest.json when different samples are
+   sequenced in two lanes of the same run.
 
 release 74.3.0 (2025-07-22)
  - Changes to npg_qc::elembio::tag_metrics_generator 
